--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "url": "https://github.com/matheusicaro/mi-node-framework/issues"
   },
   "homepage": "https://github.com/matheusicaro/mi-node-framework#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
+  }
 }
