--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "mi-node-framework",
   "version": "1.0.0",
   "description": "Framework as pack of my custom basic configuration setups for a quick build of services and APIs for Node.",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo Nothin yet"
+    "build": "tsup",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,8 +26,11 @@
   },
   "homepage": "https://github.com/matheusicaro/mi-node-framework#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   }
 }
