--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
+  },
+  "dependencies": {
+    "tsyringe": "^4.8.0"
   }
 }
