--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "typescript-eslint": "^8.16.0"
   },
   "dependencies": {
-    "tsyringe": "^4.8.0"
+    "logform": "^2.7.0",
+    "tsyringe": "^4.8.0",
+    "winston": "^3.17.0"
   }
 }
