--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
@@ -57,6 +58,7 @@
     "typescript-eslint": "^8.16.0"
   },
   "dependencies": {
+    "express": "^4.21.1",
     "logform": "^2.7.0",
     "tsyringe": "^4.8.0",
     "winston": "^3.17.0"
