--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "npm run prettier-format && npm run lint && npm run test"
     }
   },
   "lint-staged": {
