--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "test": "jest",
+    "lint": "eslint . ",
     "precommit": "lint-staged",
-    "prepare": "sh ./scripts/prepare.sh"
+    "prepare": "sh ./scripts/prepare.sh",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -38,15 +39,25 @@
       "eslint"
     ]
   },
+  "dependencies": {
+    "express": "^4.21.1",
+    "globals": "^15.12.0",
+    "logform": "^2.7.0",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
+    "winston": "^3.17.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
-    "eslint": "^9.15.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
@@ -55,10 +66,5 @@
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
-  },
-  "dependencies": {
-    "logform": "^2.7.0",
-    "tsyringe": "^4.8.0",
-    "winston": "^3.17.0"
   }
 }
