--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mi-node-framework",
-  "version": "1.0.0",
+  "name": "matheusicaro-node-framework",
+  "version": "1.0.0-next.2",
   "description": "Framework as pack of my custom basic configuration setups for a quick build of services and APIs for Node.",
   "author": "@matheusicaro",
   "license": "MIT",
