--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matheusicaro-node-framework",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Framework as pack of my custom basic configuration setups for a quick build of services and APIs for Node.",
   "author": "@matheusicaro",
   "license": "MIT",
@@ -13,7 +13,12 @@
     "url": "https://github.com/matheusicaro/mi-node-framework/issues"
   },
   "keywords": [
-    "Node"
+    "Node",
+    "Typescript",
+    "Framework",
+    "tsyringe",
+    "express",
+    "winston"
   ],
   "files": [
     "dist"
