--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     ]
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "express": "^4.21.1",
+    "fishery": "^2.2.2",
     "globals": "^15.12.0",
     "logform": "^2.7.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
+    "vitest": "^1.6.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
