--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "matheusicaro-node-framework",
-  "version": "1.0.6",
-  "description": "Framework as pack of my custom basic configuration setups for a quick build of services and APIs for Node.",
+  "version": "1.0.7",
+  "description": "My custom basic configuration setups for a quick build of services and APIs for Node.",
   "author": "@matheusicaro",
   "license": "MIT",
   "homepage": "https://github.com/matheusicaro/mi-node-framework#readme",
@@ -48,10 +48,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "fishery": "^2.2.2",
     "globals": "^15.12.0",
     "logform": "^2.7.0",
+    "matheusicaro-node-framework": "^1.0.7-next.2",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
     "vitest": "^1.6.0",
